Preparations for Lab №2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
                 <data
                     android:scheme="https"
-                    android:host="app.restaurant_manager"/>
+                    android:host="android.restaurant_manager"/>
             </intent-filter>
         </activity>
 
