--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.github.damirtugushev.restaurantmanager">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +14,7 @@
         android:theme="@style/Theme.RestaurantManager">
 
         <activity
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan"
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
